tests/baselines/reference/destructuringParameterDeclaration8ES5.errors.txt
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration8ES5.ts(9,5): error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration8ES5.ts(11,5): error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration8ES5.ts(11,16): error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration8ES5.ts(13,5): error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration8ES5.ts(15,5): error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration8ES5.ts(15,11): error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration8ES5.ts(17,5): error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration8ES5.ts(17,16): error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration8ES5.ts(19,5): error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration8ES5.ts(19,11): error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.


==== tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration8ES5.ts (10 errors) ====
    
    function one({}, {foo, bar}) {
      // ...
    }
    
    function two([], [a,b]) {}
    
    // should be an error
    one(undefined, { foo: 'foo', bar: 'bar' });  
        ~~~~~~~~~
!!! error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
    
    one(undefined, undefined);
        ~~~~~~~~~
!!! error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
                   ~~~~~~~~~
!!! error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
    
    one(null,  { foo: 'foo', bar: 'bar' });
        ~~~~
!!! error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
    
    one(null, null);
        ~~~~
!!! error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
              ~~~~
!!! error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
    
    two(undefined, undefined);
        ~~~~~~~~~
!!! error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
                   ~~~~~~~~~
!!! error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
    
    two(null, null);
        ~~~~
!!! error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.
              ~~~~
!!! error TS2690: 'Undefined or 'null' is not assignable to a destructuring parameter.